# AdventOfCode

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: coverage.cmake
src/: CMakeLists.txt
src/AoC2023/: CMakeLists.txt  aoc23_1.cpp
src/AoC2024/1/: CMakeLists.txt  README.md  aoc24_1.cpp  aoc24_1.h  main.cpp
src/AoC2024/1/test/: test_aoc24_1a.cpp  test_aoc24_1a_filereader.cpp
src/AoC2024/2/: CMakeLists.txt  aoc24_2.cpp  aoc24_2.h  main.cpp
src/AoC2024/2/test/: test_aoc24_2.cpp  test_aoc24_2_filereader.cpp
src/bla/: CMakeLists.txt  bla.cpp
src/bla/include/: bla.h
src/main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  dtest.cpp  test_bla.cpp
